kubernetes/networking_in_k8s_2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
       paths:
       - path: /
         pathType: Prefix
         backend:
            service:
             name: frontend-service
             port:
               number: 80
       - path: /api
         pathType: Prefix
         backend:
           service:
             name: backend-service
             port:
               number: 8080
